--- a/boletin/index.html
+++ b/boletin/index.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link href="./assets/css/main.cssS" rel="stylesheet" >
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href=".https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 </head>
 <body>
     <button id="boton-pago" type="button" name="button">usted pagara</button>
