--- a/boletin/index.html
+++ b/boletin/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href=".https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 </head>
 <body>
     <button id="boton-pago" type="button" name="button">usted pagara</button>
