--- a/cv/index.html
+++ b/cv/index.html
@@ -5,6 +5,7 @@
         <meta charset = "urf-8"> 
         <meta name="description" content="Aldo es un estudiante de INg en computacion 
         que esta tomando un curso  de html">
+        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     </head>
     <body style="font-family:Helvetica, arial, sans-serif;margin: 0;">
         <header style="background-color:#1922a6;color: aliceblue;text-align: center;padding: 5px;">
