--- a/boletin/index.html
+++ b/boletin/index.html
@@ -9,5 +9,10 @@
     <button id="boton-pago" type="button" name="button">usted pagara</button>
     <div class="red texto-blanoc"></div>
     <p >hola como estan</p>
+    <img src="./assets/images/el-impala-negro-1.jpg" alt="200px">
+    <figure>
+        <img src="./assets/images/el-impala-negro-1.jpg" alt="Descripción de la imagen">
+        <figcaption>Pie de imagen</figcaption>
+    </figure>    
 </body>
 </html>
