--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -97,7 +97,7 @@
 		<link rel="stylesheet"  href="estilos.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
 </head>
-<body style="background-color: #f2f2f2;">
+<body style="background-color: #f2f2f2;max-width: 100%;">
 	<!-- Header -->
 	<header>
 		<h1 style="text-align: center;">Algoritmos Voraces</h1>
