--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -117,7 +117,7 @@
 	</nav>
 
 	<!-- Contenido de la página web -->
-	<div id="inicio" class="info" style="background-color: #d4f0fc">
+	<div id="inicio" class="info" style="background-color: #d4f0fc;max-width: 100% ">
 		<h1>¿Que es un algoritmo voraz?</h1>
 		<p style="margin-right: 1000px;">Existe un buen número de métodos que los matemáticos y científicos emplean cuando deben resolver problemas complejos. Uno de los más versátiles y simples de entender es el denominado “algoritmo voraz” (Greedy algorithm). A pesar de que no siempre es capaz de encontrar una respuesta óptima, se lo utiliza con frecuencia dado que es muy rápido. Te contamos en qué consiste, qué ventajas tiene y cómo utilizarlo.</p>
         <h1>¿?</h1>
