--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -5,11 +5,13 @@
 	<style>
 		/* Estilos CSS para el navigation bar */
 		nav {
+			max-width: 100% ;
 			background-color: #333;
 			overflow: hidden;
 		}
 		
 		nav a {
+			max-width: 100% ;
 			float: left;
 			color: white;
 			text-align: center;
@@ -18,12 +20,14 @@
 		}
 		
 		nav a:hover {
+			max-width: 100% ;
 			background-color: #ddd;
 			color: black;
 		}
 
 		/* Estilos CSS para los divs de información */
 		.info {
+			max-width: 100% ;
 			display: none;
 			padding: 20px;
 			
@@ -31,6 +35,7 @@
 
 		/* Estilos CSS para el header */
 		header {
+			max-width: 100% ;
 			background-color: #0077b6;
 			color: white;
 			text-align: center;
