--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -128,9 +128,9 @@
         <h1>¿?</h1>
     </div>
 	<!-- inicio del div de dijsktra-->
-	<div id="algoritmos-dijkstra" class="info" style="background-color: #d4f0fc">
+	<div id="algoritmos-dijkstra" class="info" style="background-color: #d4f0fc;max-width: 100% ">
 		<h1 style="text-align: center;">Algoritmos dijkstra</h1>
-		<div style="margin-left: 250px;margin-left: 250px;">
+		<div style="margin-left: 250px;margin-left: 250px;max-width: 100% ">
 			<div class="text-container">
 				<p>El algoritmo de Dijkstra, también llamado algoritmo de caminos mínimos, es un algoritmo para la determinación del camino más corto dado un vértice origen al resto de los vértices en un grafo con pesos en cada arista.</p>
 		<div class=" right-image" style="margin-right:600px;margin-left:50px ;">
