--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -134,7 +134,7 @@
 			<div class="text-container">
 				<p>El algoritmo de Dijkstra, también llamado algoritmo de caminos mínimos, es un algoritmo para la determinación del camino más corto dado un vértice origen al resto de los vértices en un grafo con pesos en cada arista.</p>
 		<div class=" right-image" style="margin-right:600px;margin-left:50px ;">
-			<img src="./image/dijkstra.png"  width="250"alt="Algoritmo de Dijkstra">
+			<img src="./image/dijkstra.png"  width="250"alt="Algoritmo de Dijkstra" style="max-width: 100% ">
 		</div>
 		</div>
 		<div>
