--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -141,7 +141,7 @@
 			<dt style="font-size: 20px;margin-top: 80px;">En la tabla que veran a continuación colocaremos las ventajas y las desventajas del  algoritmo de dijsktra </dt>
 		</div>
 		<div>
-			<dt style="margin-right: 500px;">
+			<dt style="margin-right: 500px;max-width: 100% ">
 				<table style="margin-top: 20px;">
 				<tr >
 					<th>Ventajas</th>
