--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -248,7 +248,7 @@
 	<!-- Fin de div de dijsktra-->
 	
 	<!-- inicio del div de floyd-->
-	<div id="Floyd-Warshall" class="info" style="background-color: #d4f0fc ;">
+	<div id="Floyd-Warshall" class="info" style="background-color: #d4f0fc ;max-width: 100% ">
 		<h1 style="text-align: center;">Algoritmo Floyd-Warshall</h1>
 		<div style="margin-left: 250px;margin-left: 250px;">
 		<div class="text-container">
