--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -439,7 +439,7 @@
 				<div style="margin-left: 250px;margin-left: 250px">
 					<div class="text-container " style="max-width: 100% ">
 						<p>El algoritmo de Prim, dado un grafo conexo, no dirigido y ponderado, encuentra un árbol de expansión mínima. Es decir, es capaz de encontrar un subconjunto de las aristas que formen un árbol que incluya todos los vértices del grafo inicial, donde el peso total de las aristas del árbol es el mínimo posible.</p>
-				<div class=" right-image" style="margin-right:600px;margin-left:50px ;">
+				<div class=" right-image" style="margin-right:600px;margin-left:50px ;max-width: 50% ;">
 					<img src="./image/7.png"  width="250"alt="Algoritmo de Prim">
 				</div>
 					</div>
