--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -5,13 +5,11 @@
 	<style>
 		/* Estilos CSS para el navigation bar */
 		nav {
-			max-width: 100% ;
 			background-color: #333;
 			overflow: hidden;
 		}
 		
 		nav a {
-			max-width: 100% ;
 			float: left;
 			color: white;
 			text-align: center;
@@ -20,14 +18,12 @@
 		}
 		
 		nav a:hover {
-			max-width: 100% ;
 			background-color: #ddd;
 			color: black;
 		}
 
 		/* Estilos CSS para los divs de información */
 		.info {
-			max-width: 100% ;
 			display: none;
 			padding: 20px;
 			
@@ -35,7 +31,6 @@
 
 		/* Estilos CSS para el header */
 		header {
-			max-width: 100% ;
 			background-color: #0077b6;
 			color: white;
 			text-align: center;
@@ -100,9 +95,8 @@
         <meta charset = "urf-8"> 
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 		<link rel="stylesheet"  href="estilos.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" >
 </head>
-<body style="background-color: #f2f2f2;max-width: 100%;">
+<body style="background-color: #f2f2f2;">
 	<!-- Header -->
 	<header>
 		<h1 style="text-align: center;">Algoritmos Voraces</h1>
@@ -122,26 +116,26 @@
 	</nav>
 
 	<!-- Contenido de la página web -->
-	<div id="inicio" class="info" style="background-color: #d4f0fc;max-width: 100% ">
+	<div id="inicio" class="info" style="background-color: #d4f0fc">
 		<h1>¿Que es un algoritmo voraz?</h1>
 		<p style="margin-right: 1000px;">Existe un buen número de métodos que los matemáticos y científicos emplean cuando deben resolver problemas complejos. Uno de los más versátiles y simples de entender es el denominado “algoritmo voraz” (Greedy algorithm). A pesar de que no siempre es capaz de encontrar una respuesta óptima, se lo utiliza con frecuencia dado que es muy rápido. Te contamos en qué consiste, qué ventajas tiene y cómo utilizarlo.</p>
         <h1>¿?</h1>
     </div>
 	<!-- inicio del div de dijsktra-->
-	<div id="algoritmos-dijkstra" class="info" style="background-color: #d4f0fc;max-width: 100% ">
+	<div id="algoritmos-dijkstra" class="info" style="background-color: #d4f0fc">
 		<h1 style="text-align: center;">Algoritmos dijkstra</h1>
-		<div style="margin-left: 250px;margin-left: 250px;max-width: 100% ">
+		<div style="margin-left: 250px;margin-left: 250px;">
 			<div class="text-container">
 				<p>El algoritmo de Dijkstra, también llamado algoritmo de caminos mínimos, es un algoritmo para la determinación del camino más corto dado un vértice origen al resto de los vértices en un grafo con pesos en cada arista.</p>
 		<div class=" right-image" style="margin-right:600px;margin-left:50px ;">
-			<img src="./image/dijkstra.png"  width="250"alt="Algoritmo de Dijkstra" style="max-width: 100% ">
+			<img src="./image/dijkstra.png"  width="250"alt="Algoritmo de Dijkstra">
 		</div>
 		</div>
 		<div>
 			<dt style="font-size: 20px;margin-top: 80px;">En la tabla que veran a continuación colocaremos las ventajas y las desventajas del  algoritmo de dijsktra </dt>
 		</div>
 		<div>
-			<dt style="margin-right: 500px;max-width: 100% ">
+			<dt style="margin-right: 500px;">
 				<table style="margin-top: 20px;">
 				<tr >
 					<th>Ventajas</th>
@@ -248,7 +242,7 @@
 	<!-- Fin de div de dijsktra-->
 	
 	<!-- inicio del div de floyd-->
-	<div id="Floyd-Warshall" class="info" style="background-color: #d4f0fc ;max-width: 100% ">
+	<div id="Floyd-Warshall" class="info" style="background-color: #d4f0fc ;">
 		<h1 style="text-align: center;">Algoritmo Floyd-Warshall</h1>
 		<div style="margin-left: 250px;margin-left: 250px;">
 		<div class="text-container">
@@ -437,9 +431,9 @@
 			<div id="algoritmos-kruskal" class="info"  style="background-color: #d4f0fc">
 				<h1 style="text-align: center;">Algoritmos Kruskal</h1>
 				<div style="margin-left: 250px;margin-left: 250px">
-					<div class="text-container " style="max-width: 100% ">
+					<div class="text-container">
 						<p>El algoritmo de Prim, dado un grafo conexo, no dirigido y ponderado, encuentra un árbol de expansión mínima. Es decir, es capaz de encontrar un subconjunto de las aristas que formen un árbol que incluya todos los vértices del grafo inicial, donde el peso total de las aristas del árbol es el mínimo posible.</p>
-				<div class=" right-image" style="margin-right:600px;margin-left:50px ;max-width: 100% ;">
+				<div class=" right-image" style="margin-right:600px;margin-left:50px ;">
 					<img src="./image/7.png"  width="250"alt="Algoritmo de Prim">
 				</div>
 					</div>
