--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -73,6 +73,12 @@
 		#algoritmo-de-fuerza-bruta.text-container p {
 			flex-grow: 1;
 		}
+		#algoritmo-Divide-vencerás .text-container {
+		display: flex;
+		}
+		#algoritmo-Divide-vencerás.text-container p {
+			flex-grow: 1;
+		}
 	</style>
 	<script>
 		// Función para mostrar el div de información correspondiente
@@ -557,6 +563,7 @@
 				</div>
 				<div style="margin-right:500px;margin-top: 20PX;">
 					<p style="font-size: 20px;">A continuación les mostrare un pequeño ejemplo de como seria un ataque de fuerza bruta</p>
+					<div style="font-size: 18PX;">
 					<ul>Para aprender cómo hacer un ciberataque de fuerza bruta, te explicaremos el paso a paso para llevar a cabo un ejercicio de laboratorio y observar cómo funciona.
 						<li>Crea dos máquinas virtuales. Una de ellas, con el sistema operativo para pentesters, Kali Linux; la otra, con un sistema operativo Windows 7 (la versión más antigua posible). También puedes optar por una máquina virtual desarrollada intencionalmente con vulnerabilidades, como Metasploitable 1, 2 o 3.</li>
 						<li>Crea dos diccionarios: uno para usuarios y otro para contraseñas. Los puedes descargar en internet o construirlos tú mismo por medio de generadores de diccionarios de contraseñas.</li>
@@ -572,19 +579,34 @@
 							<li>Elige el archivo de texto con el diccionario de nombres de usuario en el campo «Username list«.</li>
 							<li>Elige el archivo de texto con el diccionario de contraseñas en el campo «Password list«.</li>
 							<li>En la opción «Tuning«, reduce el número de tareas «Number of tasks» a 5, para que el sistema soporte las peticiones.</li>
-							<li></li>
+							<li>Finalmente, ejecuta el proceso con el botón «Start«.</li>
 						</ul>
-						
 					</ul>
+				</div>
+				</div>
+				<div style="margin-top: 30px;">
+					<p style="font-size: 30px;">Aqui un pequeño ejemplo del algoritmo de Prim</p>
+					<video width="640" height="360" controls style="margin-top: 10px;">
+						<source src="./image/Algoritmo Fuerza Bruta.mp4" type="video/mp4">
+						Tu navegador no soporta la etiqueta de video.
+					</video>
 				</div>
 			</div>
 			</div>
+			<!--fin de div de fuerza bruta-->
 
 
-
-			<div id="algoritmo-Divide-vencerás" class="info">
-		<h1>Algoritmo divide y venceras</h1>
-		<p>ejemplo </p>
+		<div id="algoritmo-Divide-vencerás" class="info" style="background-color: #d4f0fc;">
+			<h1 style="text-align: center;font-size: 20px;">Algoritmo divide y venceras</h1>
+			<div  style="max-width: 100%;margin-left: 25%;margin-right: 25%;">
+				<div class="text-container">
+					<p>Un ataque de fuerza bruta consiste en adivinar la contraseña y/o el nombre de usuario de una persona por medio de la automatización de pruebas de ensayo y error. Algunas herramientas permiten realizar estas pruebas y simular que cada una de ellas proviene de un host diferente. </p>
+			<div class=" right-image" style="margin-right:20%;margin-left:20% ;">
+				<img src="./image/que-es-ataque-fuerza-bruta.jpg"  width="300"alt="Algoritmo de ataques de fuerza bruta">
+			</div>
+				</div>
+				<li>En la opción «Tuning«, reduce el número de tareas «Number of tasks» a 5, para que el sistema soporte las peticiones.</li>
+			</div>
 			</div>
 
 
