--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -600,7 +600,7 @@
 			<h1 style="text-align: center;font-size: 20px;">Algoritmo divide y venceras</h1>
 			<div  style="max-width: 100%;margin-left: 25%;margin-right: 25%;">
 				<div class="text-container">
-					<p>Un ataque de fuerza bruta consiste en adivinar la contraseña y/o el nombre de usuario de una persona por medio de la automatización de pruebas de ensayo y error. Algunas herramientas permiten realizar estas pruebas y simular que cada una de ellas proviene de un host diferente. </p>
+					<p>Divide y vencerás es un paradigma algorítmico (a veces llamado por error Divide y Concurrir - una adaptación en broma), similar a los paradigmas de programación Dinámica y Algoritmos ávidos o glotones. Un algoritmo Divide y Vencerás típico resuelve un problema siguiendo estos 3 pasos. </p>
 			<div class=" right-image" style="margin-right:20%;margin-left:20% ;">
 				<img src="./image/que-es-ataque-fuerza-bruta.jpg"  width="300"alt="Algoritmo de ataques de fuerza bruta">
 			</div>
