--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -79,6 +79,7 @@
 		#algoritmo-Divide-vencerás.text-container p {
 			flex-grow: 1;
 		}
+		
 	</style>
 	<script>
 		// Función para mostrar el div de información correspondiente
@@ -101,6 +102,7 @@
         <meta charset = "urf-8"> 
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 		<link rel="stylesheet"  href="estilos.css">
+		<link rel="shortcut icon" href="./image/1081009.png" type="image/x-icon">
 </head>
 <body style="background-color: #f2f2f2;">
 	<!-- Header -->
@@ -600,12 +602,12 @@
 			<h1 style="text-align: center;font-size: 20px;">Algoritmo divide y venceras</h1>
 			<div  style="max-width: 100%;margin-left: 25%;margin-right: 25%;">
 				<div class="text-container">
-					<p>Divide y vencerás es un paradigma algorítmico (a veces llamado por error Divide y Concurrir - una adaptación en broma), similar a los paradigmas de programación Dinámica y Algoritmos ávidos o glotones. Un algoritmo Divide y Vencerás típico resuelve un problema siguiendo estos 3 pasos. </p>
+					<p>Divide y vencerás es un paradigma algorítmico, similar a los paradigmas de programación Dinámica y Algoritmos ávidos o glotones. Un algoritmo Divide y Vencerás típico resuelve un problema siguiendo estos 3 pasos. </p>
 			<div class=" right-image" style="margin-right:20%;margin-left:20% ;">
-				<img src="./image/que-es-ataque-fuerza-bruta.jpg"  width="300"alt="Algoritmo de ataques de fuerza bruta">
+				<img src="./image/algo76.png"  width="300"alt="Algoritmo de ataques de fuerza bruta">
 			</div>
 				</div>
-				<li>En la opción «Tuning«, reduce el número de tareas «Number of tasks» a 5, para que el sistema soporte las peticiones.</li>
+				
 			</div>
 			</div>
 
