--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -602,7 +602,10 @@
 			<h1 style="text-align: center;font-size: 20px;">Algoritmo divide y venceras</h1>
 			<div  style="max-width: 100%;margin-left: 25%;margin-right: 25%;">
 				<div class="text-container">
-					<p>Divide y vencerás es un paradigma algorítmico, similar a los paradigmas de programación Dinámica y Algoritmos ávidos o glotones. Un algoritmo Divide y Vencerás típico resuelve un problema siguiendo estos 3 pasos. </p>
+					<ul>Divide y vencerás es un paradigma algorítmico, similar a los paradigmas de programación Dinámica y Algoritmos ávidos o glotones. Un algoritmo Divide y Vencerás típico resuelve un problema siguiendo estos 3 pasos. </ul>
+					<li>Dividir: Descomponer el problema en sub-problemas del mismo tipo. Este paso involucra descomponer el problema original en pequeños sub-problemas. Cada sub-problema debe representar una parte del problema original. Por lo general, este paso emplea un enfoque recursivo para dividir el problema hasta que no es posible crear un sub-problema más.</li>
+					<li>Vencer:  Resolver los sub-problemas recursivamente. Este paso recibe un gran conjunto de sub-problemas a ser resueltos. Generalmente a este nivel, los problemas se resuelven por sí solos.</li>
+					<li>Combinar: Combinar las respuestas apropiadamente. Cuando los sub-problemas son resueltos, esta fase los combina recursivamente hasta que estos formulan la solución al problema original. Este enfoque algorítmico trabaja recursivamente y los pasos de conquista y fusión trabajan tan a la par que parece un sólo paso. </li>
 			<div class=" right-image" style="margin-right:20%;margin-left:20% ;">
 				<img src="./image/algo76.png"  width="300"alt="Algoritmo de ataques de fuerza bruta">
 			</div>
