--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -191,7 +191,7 @@
 						<dt>pagina realizada por:</dt> 
 						<dt>Aldo Daniel Reyes Carrillo</dt>
 						<dt>Jaqueline Guadalupe Simon Gaspar</dt>
-						<dt>Oscar Martinez Gonzales</dt>
+						<dt>Oscar Martinez Gonzale</dt>
 					</dl>
 				</div>
 				<div style="margin-top: 30px;">
