--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -143,7 +143,7 @@
 	<!-- Contenido de la página web -->
 	<div id="inicio" class="info" style="background-color: #d4f0fc" >
 		<h1 style="text-align: center;">¿Que es un algoritmo voraz?</h1>
-		<div style="margin-left: 250px;margin-left: 250px">
+		<div style="margin-left: 25%;margin-left: 25%">
 			<div class="text-container">
 				<ul style="margin-top: 90px;">Backtracking (o vuelta atrás) es una técnica algorítmica para encontrar soluciones a problemas que tienen una solución completa, en los que el orden de los elementos no importa, y en los que existen una serie de variables, a cada una de las cuales, debemos asignarle un valor teniendo en cuenta unas restricciones dadas.
 					O lo que es lo mismo, es una estrategia algorítmica que busca todas las posibles soluciones dado un conjunto de variables inicial para encontrar el resultado definido por el problema. </ul>		
