--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -97,6 +97,10 @@
 		#inicio.text-container p {
 			flex-grow: 1;
 		}
+		img {
+			max-width: 100%;
+			height: auto;
+    }
 	</style>
 	<script>
 		// Función para mostrar el div de información correspondiente
@@ -148,7 +152,7 @@
 				<ul style="margin-top: 90px;">Backtracking (o vuelta atrás) es una técnica algorítmica para encontrar soluciones a problemas que tienen una solución completa, en los que el orden de los elementos no importa, y en los que existen una serie de variables, a cada una de las cuales, debemos asignarle un valor teniendo en cuenta unas restricciones dadas.
 					O lo que es lo mismo, es una estrategia algorítmica que busca todas las posibles soluciones dado un conjunto de variables inicial para encontrar el resultado definido por el problema. </ul>		
 					<div class=" right-image" style="margin-right:600px;margin-left:50px ;">
-						<img src="./image/images.png"  width="300"alt="Algoritmo de ataques de fuerza bruta">
+						<img src="./image/images.png"  width="300" alt="Algoritmo de ataques de fuerza bruta">
 					</div>
 				</div>
 				<div>
