--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -163,7 +163,7 @@
 					El enfoque “greedy” no nos garantiza obtener soluciones óptimas. Por lo tanto, siempre habrá que estudiar la corrección del algoritmo para demostrar si las soluciones obtenidas son óptimas o no.
 				</div>
 				<div>
-					<dt style="font-size: 20px;margin-top: 40px;">En la tabla que veran a continuación colocaremos las ventajas y las desventajas de los algoritmos Voraces</dt>
+					<dt style="font-size: 20px;margin-top: 40px;">en la tabla que veran a continuación colocaremos las ventajas y las desventajas de los algoritmos Voraces</dt>
 				</div>
 				<div style="margin-top: 5px;margin-right: 500px;">
 					<table>
