--- a/visualizacion/index.html
+++ b/visualizacion/index.html
@@ -19,8 +19,10 @@
   </style>
 </head>
 <body>
-  <button class="button">Botón 1</button>
-  <button class="button">Botón 2</button>
-  <button class="button">Botón 3</button>
+    <div style="align-items: center;">
+        <button class="button">Botón 1</button>
+        <button class="button">Botón 2</button>
+        <button class="button">Botón 3</button>
+    </div>
 </body>
 </html>
