--- a/visualizacion/index.html
+++ b/visualizacion/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-    <div style="align-items: center;">
+    <div style="align-content: center;">
         <button class="button">Botón 1</button>
         <button class="button">Botón 2</button>
         <button class="button">Botón 3</button>
