--- a/visualizacion/index.html
+++ b/visualizacion/index.html
@@ -3,6 +3,14 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    
     .button {
       display: inline-block;
       padding: 10px 20px;
@@ -19,10 +27,8 @@
   </style>
 </head>
 <body>
-    <div style="align-content: center;">
-        <button class="button">Botón 1</button>
-        <button class="button">Botón 2</button>
-        <button class="button">Botón 3</button>
-    </div>
+  <button class="button">Botón 1</button>
+  <button class="button">Botón 2</button>
+  <button class="button">Botón 3</button>
 </body>
 </html>
