--- a/visualizacion/index.html
+++ b/visualizacion/index.html
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-  <button class="button">Botón 1</button>
+  <button class="button">Botón </button>
   <button class="button">Botón 2</button>
   <button class="button">Botón 3</button>
 </body>
