--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
             <p style="display: inline-block;width: 400px;font-weight: 200;">Estudiante Ing en computacion</p>
         </header>
         <div style="background-color:#b82e2e;color:aliceblue;text-align: center;padding: 10px;"> 
-            Tengo un manejo basico/medio de java, manejo basico de python
+            Actual estudiante de una LIC. en  Ingenieria en Computacion
         </div>
         <section>
             <div style="width:  900px; height: 200px;margin-right:auto;margin-left:auto;">
@@ -23,7 +23,9 @@
                         <div>
                             <dl>
                                 <dt style="font-size: 22px;text-transform: uppercase;margin-bottom: 12px;margin: top 36px;;">Ingenieria en computacion</dt>
-                                <dd>2020-2022,Centro Universitario Uteg</dd>
+                                <dd>2020-2022,Centro Universitario Uteg 
+                                    <dd>Actualmente en curso</dd>
+                                </dd>
                             </dl>
                         </div>
                     </div>
@@ -34,16 +36,24 @@
                 <div style="margin-top: 60px;">
                     <h3 style="font-size: 36px;font-weight: 700 px;">Experiencia Profesional</h3>
                     <div>
-                        <dl>
-                            <dt style="font-size: 22px;text-transform: uppercase;margin-bottom: 12px;margin: top 36px;;">N/A</dt>
-                        </dl>
+                        <ul>
+                            <li style="margin-bottom: 12px;margin: top 36px;;">Cuento con un curso expedido por parte de linkedin  en  manejo basico  de python</li>
+                            <li style="margin-top: 10px;">Participe en un concurso de Robotica que fue por parte de PLAI</li>
+                            <li style="margin-top: 10px;">Tengo  el conocimiento basico de la configuracion de un router</li>
+                            <li style="margin-top: 10px;">Mananejo basico/medio de java </li>
+                            <li style="margin-top: 10px;"> Mananejo basico/medio MYSQL</li>
+                        </ul>
+                        
                     </div>
                 </div>
                 <div style="margin-top: 60px;">
                     <h3 style="font-size: 36px;font-weight: 700 px;">Informacion adicional</h3>
                     <div>
                         <ul style="margin-top: 15px;padding: 0;">
-                            <li style="margin-top:  15px;">Dispuesto a aprender de la mejor manera</li>
+                            <li style="margin-top:  15px;">Actualmente me encuentro estudiando la API de facebook y Twitter</li>
+                            <li>
+                                Como proyectos eh participado en la realización de una agenda de contactos en java  
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -52,7 +62,7 @@
                     <div>
                         <ul style="margin-top: 15px;padding: 0;">
                             <li style="margin-top:  15px;">
-                            <a href="https://www.facebook.com/profile.php?id=100009034863176" target="_blank" >Facebook</a>
+                            <a href="https://www.linkedin.com/in/aldo-daniel-reyes-carrillo-217401242/" target="_blank" >Linkedin</a>
                             </li>
                             <li style="margin-top:  15px;">
                                 <a href="https://github.com/phantom12eD" target="_blank">GitHub</a>
