--- a/cv/index.html
+++ b/cv/index.html
@@ -43,7 +43,7 @@
                             <li style="margin-top: 10px;">Mananejo basico/medio de java </li>
                             <li style="margin-top: 10px;"> Mananejo basico/medio MYSQL</li>
                         </ul>
-                        
+                        <dt>hhol</dt>
                     </div>
                 </div>
                 <div style="margin-top: 60px;">
