--- a/cv/index.html
+++ b/cv/index.html
@@ -52,7 +52,7 @@
                         <ul style="margin-top: 15px;padding: 0;">
                             <li style="margin-top:  15px;">Actualmente me encuentro estudiando la API de facebook y Twitter</li>
                             <li style="margin-top:  15px;">
-                                Como proyectos eh participado en la realización de una agenda de contactos en jav 
+                                Como proyectos eh participado en la realización de una agenda de contactos en java 
                             </li>
                             <li style="margin-top:  15px;"> Asi como mi cv es proyecto mio en html</li>
                         </ul>
