--- a/cv/index.html
+++ b/cv/index.html
@@ -71,7 +71,7 @@
                         </ul>
                     </div>
             </div>
-            
+            <ul><li>hola</li></ul>
         </section>
     </body>
 </html>
