--- a/cv/index.html
+++ b/cv/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div  style="display: inline-block;width:30% ;margin-top:20px">
-                <img src="foto_prueba.1.jpg" width="300">  
+                <img src="fovo_cv.jpg" width="150">  
                 </div>
                 <div style="margin-top: 60px;">
                     <h3 style="font-size: 36px;font-weight: 700 px;">Experiencia Profesional</h3>
@@ -71,6 +71,7 @@
                         </ul>
                     </div>
             </div>
+
         </section>
     </body>
 </html>
