--- a/cv/index.html
+++ b/cv/index.html
@@ -34,14 +34,16 @@
                 <img src="fovo_cv.jpg" width="150">  
                 </div>
                 <div style="margin-top: 60px;">
-                    <h3 style="font-size: 36px;font-weight: 700 px;">Experiencia Profesional</h3>
+                    <h3 style="font-size: 36px;font-weight: 700 px;">Estudios universatios</h3>
                     <div>
                         <ul>
                             <li style="margin-bottom: 12px;margin: top 36px;;">Cuento con un curso expedido por parte de linkedin  en  manejo basico  de python</li>
-                            <li style="margin-top: 10px;">Participe en un concurso de Robotica que fue por parte de PLAI</li>
-                            <li style="margin-top: 10px;">Tengo  el conocimiento basico de la configuracion de un router</li>
+                            <li style="margin-top: 10px;">Participe en un concurso de Robotica que fue por parte de PLAI y mi equipo y yo quedamos en segundo lugar</li>
+                            <li style="margin-top: 10px;">Tengo  el conocimiento basico de la configuracion de Redes</li>
                             <li style="margin-top: 10px;">Mananejo basico/medio de java </li>
                             <li style="margin-top: 10px;"> Mananejo basico/medio MYSQL</li>
+                            <li style="margin-top: 10px;"> Mananejo basico de HTML</li>
+                            <li style="margin-top: 10px;">Actualmente estoy en inicios de desarrollar un juguete-interactivo que ayude a niños, con sus habilidades socioemocionales</li>
                         </ul>
                         
                     </div>
