--- a/archivo_secuencial/index.html
+++ b/archivo_secuencial/index.html
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" href="./imagenes/rose-bouquet-on-isolated-white-background-flowers-clipart-for-date-celebration-valentines-day-romantic-wedding-gift-illustration-pink-rosy-bunch-with-red-ribbon-closeup-floral-drawing-vector-removebg-.ico" type="image/x-icon">
 </head>
 <body style="background-color: rgb(130, 59, 181);">
-    <div style="margin-left:20%;margin-top: 10%;margin-right: 25%;"> 
-        <img src="./imagenes/boletoejemlpo.jpg" alt="" style=" max-width: 100%;height: auto;">
+    <div style="margin-left:20%;margin-top: 10%;margin-right: 25%;"> hola
+        <img src="./imagenes/boletoejemlpo.jpg" alt="" style=" max-width: 130%;height: auto;">
     </div>
 </body>
 </html>
