--- a/archivo_secuencial/index.html
+++ b/archivo_secuencial/index.html
@@ -20,7 +20,7 @@
     <div id="imagen" style="margin-left:25%;margin-top: 10%;margin-right: 20%;">
         <div style="position: relative;">
             <img src="./imagenes/boletoejemlpo.jpg" alt="" style="max-width: 130%; height: auto;">
-            <button onclick="mostrarMapa()" style="position: absolute; bottom: -5%; left: 0; right: 0; margin: 0 auto;">Ver Mapa</button>
+            <button onclick="mostrarMapa()" style="position: absolute; bottom: -10%; left: 0; right: 0; margin: 0 auto; background-color: rgb(206, 204, 208);">Ver Mapa</button>
         </div>
     </div>
     <div id="mapa">
