--- a/archivo_secuencial/index.html
+++ b/archivo_secuencial/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis XV</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="shortcut icon" href="./imagenes/rose-bouquet-on-isolated-white-background-flowers-clipart-for-date-celebration-valentines-day-romantic-wedding-gift-illustration-pink-rosy-bunch-with-red-ribbon-closeup-floral-drawing-vector-removebg-.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./imagenes/OIP-removebg-preview.png" type="image/x-icon">
     <style>
         #mapa {
             display: none;
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body style="background-color: rgb(130, 59, 181);">
-    <div id="imagen" style="margin-left:25%;margin-top: 10%;margin-right: 20%;">
+    <div id="imagen" style="margin-left:25%;margin-top: 30%;margin-right: 20%;">
         <div style="position: relative;">
             <img src="./imagenes/boletoejemlpo.jpg" alt="" style="max-width: 130%; height: auto;">
             <button onclick="mostrarMapa()" style=" bottom: -10%; left: 0; right: 0; margin: 0 auto; background-color: rgb(206, 204, 208);">Ver Mapa</button>
