--- a/proyecto_integrador/index.html
+++ b/proyecto_integrador/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head style="margin-top: auto;">
-	<title>Algoritmos Voraces</title>
+	<title>Algoritmos Vorace</title>
 	<style>
 		/* Estilos CSS para el navigation bar */
 		nav {
